@@ -1,3 +1,9 @@
+2006-10-10 Jens Tkotz <jens@peino.de> 1.6-svn-b20
+
+ * Change: Better failure handling for eCards.
+
+ * Fix: eCard preview did not work embedded.
+
 2006-10-10 Jens Tkotz <jens@peino.de> 1.6-svn-b19
 
  * Fix: More code and CSS adjustments for autocomplete.
